sanitized inputs and prepared requests

--- a/www/src/login-form/login-form.html
+++ b/www/src/login-form/login-form.html
@@ -28,6 +28,7 @@
             <button class="btn btn-primary raised" type="button" id="btn-send" disabled submit click="send">
                 Signin
             </button>
+            <span>coucou</span>
         </div>
     </div>
 
